--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1840,23 +1840,6 @@ header .btn {
   gap: 1rem;
 }
 
-.testimonial_content .right_content .image__container .feedback_box {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-align: end;
-  -ms-flex-align: end;
-  align-items: end;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  gap: 1rem;
-  margin-top: -18rem;
-}
 
 .testimonial_content .right_content .image__container .feedback_box .blank-box {
   height: 371px;
@@ -1865,26 +1848,42 @@ header .btn {
   opacity: 0.2;
 }
 
+
+.left_column, .right_column {
+  display: flex;
+  flex-direction: column;
+  transition: transform 0.1s linear;
+}
+
+
+.testimonial_content .right_content .image__container {
+  display: flex;
+  justify-content: space-between; 
+  gap: 1rem;
+  overflow: hidden; 
+}
+
+.testimonial_content .right_content .image__container .feedback_box {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  opacity: 1;
+}
+
+
+
 .testimonial_content .right_content .image__container .feedback_box .feed_back {
   padding: 1rem;
   height: 371px;
   width: 316px;
   background-color: var(--white);
   color: var(--black);
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
   flex-direction: column;
-  -webkit-box-align: self-start;
-  -ms-flex-align: self-start;
   align-items: self-start;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
   justify-content: space-between;
 }
+
 
 .testimonial_content
   .right_content
@@ -2257,7 +2256,7 @@ header .btn {
 /* --------------------------- Footer --------------------- */
 
 .footer {
-  padding-top: 4rem;
+  padding-top: 7.9rem;
   padding-bottom: 12rem;
   height: 569px;
   width: 100%;
@@ -2293,6 +2292,7 @@ header .btn {
   -ms-flex-align: start;
   align-items: start;
   gap: 12px;
+  margin-top: -60px;
 }
 
 .footer_content .short_links a {
@@ -2314,7 +2314,7 @@ header .btn {
 .footer_content .service_items h3 {
   font-size: 14px;
   line-height: 30px;
-  font-family: var(--gelion-regular);
+  font-weight: 200;
 }
 
 .footer_content .contact_info {
